# network-infrastructure-ai-platform

./: .coderabbit.yaml  .cubic.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  PROAUDIT.md  README.md  cubic.yaml
backend/: .gitattributes  .pip-audit-allowlist.txt  alembic.ini  pyproject.toml  requirements.lock.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_m1_baseline.py  0002_m2_device_site.py  0003_m2_topology_snapshots.py  0004_m3_agent_sessions_traces.py  0005_auth_account_ui.py  0006_m4_config_docs.py  0007_m5_change_requests_pcap.py  0008_m5_audit_request_id.py  0009_m5_approvals_appendonly_pcap_index.py  0010_oidc_identity_federation.py  0011_p2_audit_hash_chain.py  0012_p2_device_credential_scope.py  0013_p3_config_backup_runs.py  0014_p3_audit_export_cursor.py  0015_refresh_jti_reuse_detection.py  0016_p4_config_archives.py  0017_p4_adc_virtualization_inventory.py  0018_p4_application_dependency_topology.py  0019_credential_disabled_at.py  0020_p4_report_engine.py  0021_p4_audit_chain_verification_runs.py  0022_p4_verification_runs_append_only.py  0023_p5_report_dispatch_outbox.py  0024_audit_reconciliation_lookup.py
backend/app/: __init__.py  db.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  actors.py  config.py  crypto.py  errors.py  logging.py  metrics.py  metrics_asgi.py  oidc.py  redis.py  security.py
backend/app/engines/: __init__.py
backend/app/knowledge/: __init__.py  embedding.py  neo4j_client.py  schema.py  topology_read.py
backend/app/llm/: __init__.py  providers.py  readiness.py  redaction.py  runtime_settings.py
backend/app/models/: __init__.py  adc.py  agents.py  applications.py  audit.py  base.py  change_requests.py  compliance_history.py  config_mgmt.py  dispatch_outbox.py  identity.py  inventory.py  mixins.py  pcap_metadata.py  reports.py  topology.py  virtualization.py
backend/app/ops/: __init__.py
backend/app/plugins/: __init__.py  base.py  registry.py
backend/app/schemas/: __init__.py  adc.py  agents_api.py  applications.py  changes_api.py  config_mgmt.py  credentials.py  devices.py  discovery.py  discovery_api.py  normalized.py  packet_api.py  reports_api.py  security.py  topology.py  virtualization.py
backend/app/services/: __init__.py  applications.py  config_archives.py  devices.py  integrity.py  reconciliation.py  report_outbox.py  users.py
backend/app/workers/: __init__.py  celery_app.py  dispatch.py
backend/scripts/: check_celery_dispatch.py  export_openapi.py  generate_env_example.py  seed_smb_scenario.py
backend/tests/: __init__.py  conftest.py  oidc_helpers.py  test_db.py  test_db_mtls.py  test_health.py  test_m1_exit_criteria.py  test_main.py  test_p2_w4_pr76_fixes.py
backend/tests/agents/: conftest.py  test_composition.py  test_eight_way_routing.py
backend/tests/api/: conftest.py  test_account.py  test_adc.py  test_agents.py  test_agents_rate_limit_wiring.py  test_applications.py  test_applications_router_boundary.py  test_auth.py  test_auth_refresh.py  test_auth_sessions.py  test_auth_users_router_boundary.py  test_changes_packet.py  test_config_snapshots.py  test_credentials.py  test_deps.py  test_devices.py  test_devices_router_boundary.py  test_discovery.py  test_docs.py  test_impact.py  test_integrations.py  test_login_lockout.py  test_oidc.py  test_rate_limit_api.py  test_reports.py  test_role_matrix.py  test_settings_admin.py  test_supervisor_cache.py  test_topology.py  test_users_admin.py  test_virtualization.py
backend/tests/core/: __init__.py  test_config.py  test_crypto.py  test_errors.py  test_kms_contract.py  test_kms_providers.py  test_metrics_middleware.py  test_metrics_series.py  test_oidc.py  test_redis_client.py  test_security.py  test_security_async.py
backend/tests/engines/: __init__.py
backend/tests/evals/: __init__.py  firewall_corpus.py  test_firewall_analysis_eval.py
backend/tests/fixtures/: requirements-vuln-test.txt
backend/tests/integration/: test_app_derivation_eval_graph.py  test_graph_redis.py  test_kms_emulators.py
backend/tests/knowledge/: __init__.py  test_embedding.py  test_neo4j_client.py  test_schema.py  test_topology_impact.py  test_topology_read.py
backend/tests/llm/: test_prompts.py  test_providers.py  test_readiness.py  test_redaction.py  test_registry.py  test_runtime_settings.py
backend/tests/migrations/: __init__.py  test_0001_m1_baseline.py  test_0004_m3_agent_sessions_traces.py  test_0005_auth_account_ui.py  test_0006_m4_config_docs.py  test_0007_m5_change_requests_pcap.py  test_0008_m5_audit_request_id.py  test_0009_m5_approvals_appendonly_pcap_index.py  test_0010_oidc_identity_federation.py  test_0011_p2_audit_hash_chain.py  test_0012_p2_device_credential_scope.py  test_0013_p3_config_backup_runs.py  test_0014_p3_audit_export_cursor.py  test_0015_refresh_jti_reuse_detection.py  test_0016_config_archives.py  test_0017_p4_adc_virtualization_inventory.py  test_0018_p4_application_dependency_topology.py  test_0019_credential_disabled_at.py  test_0020_p4_report_engine.py  test_0021_audit_chain_verification_runs.py  test_0022_verification_runs_append_only.py  test_0023_report_dispatch_outbox.py  test_0024_audit_reconciliation_lookup.py
backend/tests/models/: conftest.py  test_agents.py  test_applications.py  test_audit.py  test_auth_account.py  test_change_requests.py  test_config_mgmt.py  test_device_credential_scope.py  test_identity.py  test_inventory.py  test_metadata.py  test_mixins.py  test_pcap_metadata.py
backend/tests/ops/: __init__.py
backend/tests/pg/: README.md  conftest.py  test_access_review_pg.py  test_app_db_wiring_pg.py  test_app_derivation_eval_pg.py  test_app_derivation_pg.py  test_application_concurrency_pg.py  test_application_tagging_pg.py  test_applications_pg.py  test_audit_export_pg.py  test_audit_hash_chain_pg.py  test_audit_integrity_pg.py  test_change_report_pg.py  test_compliance_posture_pg.py  test_devices_pg.py  (+8 more)
tools/obsidian-mcp/: README.md  pyproject.toml
(+1256 files in other folders)
