[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netops-backend"
version = "0.1.0"
description = "AI Network Operations Platform - modular-monolith backend (FastAPI api + Celery worker)"
requires-python = ">=3.11"
dependencies = [
    # Web / API (D2)
    "fastapi",
    "uvicorn[standard]",
    # starlette is FastAPI's transitive ASGI core; pin its security floor here.
    # security: GHSA-82w8-qh3p-5jfq, GHSA-jp82-jpqv-5vv3 ; re-review 2026-09-23
    "starlette>=1.3.1",
    "pydantic>=2",
    # security: GHSA-4xgf-cpjx-pc3j ; re-review 2026-09-23
    "pydantic-settings>=2.14.2",
    # Persistence (D4)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pgvector",
    # Async jobs + cache (D8)
    "celery[redis]",
    "redis",
    # Observability (D15): structured logs + Prometheus metrics. prometheus-client
    # backs the topology-RTO `topology_rebuild_seconds` series (P1 W5-T3, ADR-0030
    # §2) and any future /metrics exposition. The engine metric hook degrades to a
    # no-op when it is absent, so a slim install still imports.
    "structlog",
    "prometheus-client",
    # HTTP client (D7)
    "httpx",
    # Graph store (D5)
    "neo4j",
    # Security (D10, D11)
    "cryptography",
    "pyjwt",
    "bcrypt>=4.1",
    # OIDC/SSO relying party + JOSE (D10, ADR-0028): Authlib drives the
    # Authorization-Code+PKCE flow, OIDC discovery, JWKS, and ID-token
    # validation. ADR-0010 §1 / ADR-0028 §1 name it; PyJWT (above) still signs
    # the platform-issued JWT.
    "authlib>=1.6",
    # Agent orchestration + multi-LLM (D3, D9)
    "langgraph",
    "langchain-core",
    # langsmith is langchain-core's transitive telemetry client; pin its
    # security floor here (langchain-core accepts it).
    # security: GHSA-f4xh-w4cj-qxq8 ; re-review 2026-09-23
    "langsmith>=0.8.18",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-ollama",
    # CLI output parsing (D7)
    "textfsm",
    "ntc-templates",
    # Device transports (D7): SSH CLI + SNMP v2c/v3
    "netmiko",
    "pysnmp",
    # Declarative compliance policies (M4, ADR-0018): YAML rule documents
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "import-linter",
    # In-memory async SQLite for DB-backed unit tests (Postgres-only DDL is
    # exercised by `integration`-marked tests against compose Postgres).
    "aiosqlite",
]

# Production KMS backends (W6-T2, ADR-0032 §2). OPTIONAL by design: a deployment
# installs ONLY the extra for its chosen backend (VAULT_KEY_PROVIDER), and the
# local Env/File fallback (default) needs none of these. Each SDK is imported
# lazily inside core/crypto so a slim install — and the offline unit suite, which
# drives the providers via an in-memory fake — never requires them.
kms-aws = ["boto3"]
kms-azure = ["azure-identity", "azure-keyvault-keys"]
kms-vault = ["hvac"]

# Vendor plugin discovery group (D6 / ADR-0006). M1: first plugins (cisco_ios,
# cisco_iosxe, eos) register here as
#   <vendor_id> = "app.plugins.vendors.<vendor_id>.plugin:<Vendor>Plugin"
[project.entry-points."netops.plugins"]
bluecat = "app.plugins.vendors.bluecat.plugin:BluecatPlugin"
cisco_ios = "app.plugins.vendors.cisco_ios.plugin:CiscoIosPlugin"
cisco_iosxe = "app.plugins.vendors.cisco_iosxe.plugin:CiscoIosXePlugin"
cisco_nxos = "app.plugins.vendors.cisco_nxos.plugin:CiscoNxosPlugin"
eos = "app.plugins.vendors.eos.plugin:EosPlugin"
infoblox = "app.plugins.vendors.infoblox.plugin:InfobloxPlugin"
junos = "app.plugins.vendors.junos.plugin:JunosPlugin"
spatiumddi = "app.plugins.vendors.spatiumddi.plugin:SpatiumddiPlugin"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Lint / format (D16)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Type checking (D16). Strict flags on app.core / app.plugins / app.agents;
# the rest of the tree is checked at a moderate baseline.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
packages = ["app"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Per-module strict mode (mypy does not allow `strict = true` in overrides,
# so the individual strict flags are enumerated).
module = ["app.core.*", "app.plugins.*", "app.agents.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Vendor / third-party libraries without (complete) type stubs.
module = [
    "asyncpg.*",
    "authlib.*",
    # Optional KMS SDKs (W6-T2) — installed only per chosen backend; imported
    # lazily in core/crypto, so they may be absent when mypy runs.
    "azure.*",
    "boto3.*",
    "botocore.*",
    "hvac.*",
    "celery.*",
    "kombu.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "langchain_ollama.*",
    "langchain_openai.*",
    "langgraph.*",
    "neo4j.*",
    "ntc_templates.*",
    "pgvector.*",
    "pysnmp.*",
    "textfsm.*",
    "yaml.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests (D16)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires compose-backed Postgres/Neo4j/Redis (excluded from the unit run)",
    "lab: requires real network devices; never runs in CI",
    "eval: agent eval suite (M3 + M4) — deterministic exit-criteria tests (run in CI)",
    "parity: real-provider (Ollama/Anthropic) parity run — manual pre-release gate, skipped in CI",
    "routing: real-LLM supervisor routing eval; opt-in, skipped in CI (manual gate).",
    "rag: real-embedder RAG retrieval relevance eval; opt-in, skipped in CI (manual gate).",
]

# ---------------------------------------------------------------------------
# Module boundaries (REPO-STRUCTURE §3.3). Only the contracts whose member
# packages exist at M0 are declared; the full six-contract set lands as the
# agents/engines/plugins/services packages are created (M1+).
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "app.core imports nothing app-internal (REPO-STRUCTURE §3.2 row 1)"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = ["app.api", "app.db", "app.main", "app.models", "app.workers"]

[[tool.importlinter.contracts]]
name = "app.knowledge imports only core/schemas/models/llm (REPO-STRUCTURE §3.2 row 5)"
type = "forbidden"
source_modules = ["app.knowledge"]
forbidden_modules = [
    "app.agents",
    "app.api",
    "app.engines",
    "app.main",
    "app.plugins",
    "app.services",
    "app.workers",
]
