[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netops-backend"
version = "0.1.0"
description = "AI Network Operations Platform - modular-monolith backend (FastAPI api + Celery worker)"
requires-python = ">=3.11"
dependencies = [
    # Web / API (D2)
    # The former <0.137 cap (FastAPI 0.137.0 made APIRouter.include_router lazy,
    # keeping an `_IncludedRouter` node instead of flattening child routes into
    # the parent's `.routes`) is lifted (ARCH_DEBT #3): the W6-T6 rate-limit
    # wiring tests (tests/api/test_agents_rate_limit_wiring.py) now traverse the
    # effective (dependency-merged) route tree via `_IncludedRouter`, so the
    # flattened structure is no longer required. Exact version pinned by the
    # dependency lockfile; starlette security floor kept below.
    "fastapi>=0.137",
    "uvicorn[standard]",
    # starlette is FastAPI's transitive ASGI core; pin its security floor here.
    # security: GHSA-82w8-qh3p-5jfq, GHSA-jp82-jpqv-5vv3 ; re-review 2026-09-23
    "starlette>=1.3.1",
    "pydantic>=2",
    # security: GHSA-4xgf-cpjx-pc3j ; re-review 2026-09-23
    "pydantic-settings>=2.14.2",
    # Persistence (D4)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pgvector",
    # Async jobs + cache (D8)
    "celery[redis]",
    "redis",
    # Observability (D15): structured logs + Prometheus metrics. prometheus-client
    # backs the topology-RTO `topology_rebuild_seconds` series (P1 W5-T3, ADR-0030
    # §2) and any future /metrics exposition. The engine metric hook degrades to a
    # no-op when it is absent, so a slim install still imports.
    "structlog",
    "prometheus-client",
    # HTTP client (D7)
    "httpx",
    # Graph store (D5)
    "neo4j",
    # Security (D10, D11)
    "cryptography",
    "pyjwt",
    "bcrypt>=4.1",
    # OIDC/SSO relying party + JOSE (D10, ADR-0028): Authlib drives the
    # Authorization-Code+PKCE flow, OIDC discovery, JWKS, and ID-token
    # validation. ADR-0010 §1 / ADR-0028 §1 name it; PyJWT (above) still signs
    # the platform-issued JWT.
    "authlib>=1.6",
    # Agent orchestration + multi-LLM (D3, D9)
    "langgraph",
    "langchain-core",
    # langsmith is langchain-core's transitive telemetry client; pin its
    # security floor here (langchain-core accepts it).
    # security: GHSA-f4xh-w4cj-qxq8 ; re-review 2026-09-23
    "langsmith>=0.8.18",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-ollama",
    # CLI output parsing (D7)
    "textfsm",
    "ntc-templates",
    # Device transports (D7): SSH CLI + SNMP v2c/v3
    "netmiko",
    "pysnmp",
    # Virtualization SDK (D7, ADR-0051): pyVmomi is the named VMware transport —
    # the vCenter (SOAP) client behind the `vmware` plugin. Floor + major-cap
    # tracks client-side currency (one pinned client serves mixed vCenter 7/8
    # estates); the exact version is resolved in requirements.lock.txt (same
    # commit) so the drift gate + supply-chain scanning cover it from day one.
    # pyVmomi ships pure-Python wheels (air-gap-mirrorable, no build toolchain).
    "pyvmomi>=8.0,<9",
    # Declarative compliance policies (M4, ADR-0018): YAML rule documents
    "pyyaml",
    # Packet-analysis self-confining executor (ADR-0049): libseccomp Python
    # binding. A Linux-marker RUNTIME dep — the pure-python wheel installs into
    # the shared venv on any Linux image (it is NOT image-scoped); the import is
    # guarded so the Windows / eager unit suite never loads it. What IS scoped to
    # the packet-analysis image stage (ADR-0049 blocker 7 / T3) are tshark +
    # libseccomp2 — installed only there, never in the shared api/worker image.
    "pyseccomp; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    # Parallel test execution: CI runs the unit suite with `-n 4` (4-vCPU
    # runners); pytest-cov combines per-worker data in-process, so the
    # --cov-fail-under=80 gate stays computed over the whole suite (ADR-0016).
    "pytest-xdist",
    # Hard cap hung tests (F6): default 60s; de-sleep real-clock waits in suite.
    "pytest-timeout",
    "ruff",
    "mypy",
    "import-linter",
    # In-memory async SQLite for DB-backed unit tests (Postgres-only DDL is
    # exercised by `integration`-marked tests against compose Postgres).
    "aiosqlite",
]

# Production KMS backends (W6-T2, ADR-0032 §2). OPTIONAL by design: a deployment
# installs ONLY the extra for its chosen backend (VAULT_KEY_PROVIDER), and the
# local Env/File fallback (default) needs none of these. Each SDK is imported
# lazily inside core/crypto so a slim install — and the offline unit suite, which
# drives the providers via an in-memory fake — never requires them.
kms-aws = ["boto3"]
kms-azure = ["azure-identity", "azure-keyvault-keys"]
kms-vault = ["hvac"]

# Vendor plugin discovery group (D6 / ADR-0006). M1: first plugins (cisco_ios,
# cisco_iosxe, eos) register here as
#   <vendor_id> = "app.plugins.vendors.<vendor_id>.plugin:<Vendor>Plugin"
[project.entry-points."netops.plugins"]
bluecat = "app.plugins.vendors.bluecat.plugin:BluecatPlugin"
cisco_ios = "app.plugins.vendors.cisco_ios.plugin:CiscoIosPlugin"
cisco_iosxe = "app.plugins.vendors.cisco_iosxe.plugin:CiscoIosXePlugin"
cisco_nxos = "app.plugins.vendors.cisco_nxos.plugin:CiscoNxosPlugin"
eos = "app.plugins.vendors.eos.plugin:EosPlugin"
f5_bigip = "app.plugins.vendors.f5_bigip.plugin:F5BigipPlugin"
fortios = "app.plugins.vendors.fortios.plugin:FortiosPlugin"
infoblox = "app.plugins.vendors.infoblox.plugin:InfobloxPlugin"
junos = "app.plugins.vendors.junos.plugin:JunosPlugin"
panos = "app.plugins.vendors.panos.plugin:PanosPlugin"
spatiumddi = "app.plugins.vendors.spatiumddi.plugin:SpatiumddiPlugin"
vmware = "app.plugins.vendors.vmware.plugin:VmwarePlugin"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Lint / format (D16)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Type checking (D16). Strict flags on app.core / app.plugins / app.agents;
# the rest of the tree is checked at a moderate baseline.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
packages = ["app"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Per-module strict mode (mypy does not allow `strict = true` in overrides,
# so the individual strict flags are enumerated).
module = ["app.core.*", "app.plugins.*", "app.agents.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Vendor / third-party libraries without (complete) type stubs.
module = [
    "asyncpg.*",
    "authlib.*",
    # Optional KMS SDKs (W6-T2) — installed only per chosen backend; imported
    # lazily in core/crypto, so they may be absent when mypy runs.
    "azure.*",
    "boto3.*",
    "botocore.*",
    "hvac.*",
    "celery.*",
    "kombu.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "langchain_ollama.*",
    "langchain_openai.*",
    "langgraph.*",
    "neo4j.*",
    "ntc_templates.*",
    "pgvector.*",
    "pysnmp.*",
    # libseccomp Python binding (ADR-0049): Linux-only, no type stubs, imported
    # lazily in app.engines.packet.executor only on the enforced (Linux) path.
    # Both spellings: the official ``seccomp`` C binding and the pip-installable
    # ``pyseccomp`` fork the packet-analysis image ships.
    "seccomp.*",
    "pyseccomp.*",
    "textfsm.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyVmomi (ADR-0051): the VMware SOAP SDK ships partial/untyped surfaces (its
# managed-object/data-object types are dynamically generated). The vmware client
# isolates it behind typed fetch_* methods (ADR-0006 §6); treat the SDK itself
# as untyped (Any) so its dynamic constructors are not flagged as untyped calls.
module = ["pyVmomi.*", "pyVim.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

# ---------------------------------------------------------------------------
# Tests (D16)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 60
testpaths = ["tests"]
markers = [
    "integration: requires compose-backed Postgres/Neo4j/Redis (excluded from the unit run)",
    "lab: requires real network devices; never runs in CI",
    "eval: agent eval suite (M3 + M4) — deterministic exit-criteria tests (run in CI)",
    "parity: real-provider (Ollama/Anthropic) parity run — manual pre-release gate, skipped in CI",
    "routing: real-LLM supervisor routing eval; opt-in, skipped in CI (manual gate).",
    "rag: real-embedder RAG retrieval relevance eval; opt-in, skipped in CI (manual gate).",
    "injection: prompt-injection eval corpus (ADR-0033). Deterministic ED1-ED5 run in CI; the real-LLM ED6 layer is opt-in (NETOPS_RUN_INJECTION_EVAL=1).",
]

# ---------------------------------------------------------------------------
# Module boundaries (REPO-STRUCTURE §3.3). The full six-contract set is wired
# (AR-W0-T1), plus additional narrow contracts closing §3.2-row edges the
# layer-tier ordering can't structurally catch (PR #159 review: app.plugins ->
# app.db/app.models, app.engines -> app.llm, app.llm -> app.db,
# app.agents.framework -> app.plugins, and specialists -> app.knowledge). See
# REPO-STRUCTURE §9 "Import-linter status" for the as-built note.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "app.core imports nothing app-internal (REPO-STRUCTURE §3.3 contract 4, §3.2 row 1)"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = [
    "app.agents",
    "app.api",
    "app.db",
    "app.llm",
    "app.main",
    "app.models",
    "app.plugins",
    "app.schemas",
    "app.workers",
]

[[tool.importlinter.contracts]]
name = "app.knowledge imports only core/schemas/models/llm (REPO-STRUCTURE §3.2 row 5)"
type = "forbidden"
source_modules = ["app.knowledge"]
forbidden_modules = [
    "app.agents",
    "app.api",
    "app.engines",
    "app.main",
    "app.plugins",
    "app.services",
    "app.workers",
]

[[tool.importlinter.contracts]]
name = "app.plugins does not import app.agents, app.db, or app.models (REPO-STRUCTURE §3.3 contract 1, §3.2 row 6)"
type = "forbidden"
source_modules = ["app.plugins"]
forbidden_modules = ["app.agents", "app.db", "app.models"]

[[tool.importlinter.contracts]]
name = "app.agents specialists (excluding framework) do not reach engines/services/plugins/models/db/knowledge directly (REPO-STRUCTURE §3.3 contract 2, §3.2 row 11)"
type = "forbidden"
source_modules = [
    "app.agents.automation",
    "app.agents.configuration",
    "app.agents.consultant",
    "app.agents.ddi",
    "app.agents.discovery",
    "app.agents.documentation",
    "app.agents.master_architect",
    "app.agents.packet_analysis",
    "app.agents.security",
    "app.agents.troubleshooting",
]
forbidden_modules = [
    "app.db",
    "app.engines",
    "app.knowledge",
    "app.models",
    "app.plugins",
    "app.services",
]
# Indirect-only (allow_indirect_imports=true): specialists legitimately reach
# engines/services/models via app.agents.framework (row 10), which is excluded
# from source_modules above but not from the dependency graph, so a default
# (indirect-checking) forbidden contract would flag every specialist that uses
# the framework's tool wrappers at all. Only *direct* specialist -> forbidden
# imports are real violations here.
allow_indirect_imports = true
ignore_imports = [
    # ChangeRequest executor input; owner: future STRONG automation-port extraction.
    "app.agents.automation.executors -> app.models.change_requests",
    # CR enums/state drive approval lifecycle; owner: future STRONG automation-port extraction.
    "app.agents.automation.agent -> app.models.change_requests",
    # ChangeRequestKind decorator metadata; owner: future framework/schema metadata seam.
    "app.agents.ddi.tools -> app.models.change_requests",
    # ChangeRequestKind decorator metadata; owner: future framework/schema metadata seam.
    "app.agents.security.tools -> app.models.change_requests",
    # DiscoveryPlan validates job input; owner: future framework planning port.
    "app.agents.discovery.tools -> app.engines.discovery.planner",
    # Conversation/findings/count result types; owner: future framework result schema.
    "app.agents.packet_analysis.agent -> app.engines.packet",
    # PacketFindings tool result type; owner: future framework result schema.
    "app.agents.packet_analysis.tools -> app.engines.packet",
    # Firewall analyzers are tool capabilities; owner: future framework analysis port.
    "app.agents.security.tools -> app.engines.security.firewall",
    # Change protocol types drive approved execution; owner: future STRONG automation port.
    "app.agents.automation.agent -> app.plugins.base",
    # Change plan/draft/result protocols; owner: future STRONG automation port.
    "app.agents.automation.executors -> app.plugins.base",
    # Capability enum for live reads; owner: future framework live-read transport port.
    "app.agents.troubleshooting.tools -> app.plugins.base",
    # Registry resolves vendor capability; owner: future framework live-read transport port.
    "app.agents.troubleshooting.tools -> app.plugins.registry",
    # SSH params/transport helpers; owner: future framework live-read transport port.
    "app.agents.troubleshooting.tools -> app.plugins.transport",
    # Append-only execution audit; owner: future STRONG automation-port extraction.
    "app.agents.automation.agent -> app.services.audit.service",
    # Approved CR lifecycle service; owner: future STRONG automation-port extraction.
    "app.agents.automation.agent -> app.services.change_requests",
]
# No new entries may be added to this allowlist without updating this
# contract (and its REPO-STRUCTURE §3.3 contract-2 description) — new
# agents -> engines/services/plugins/models/db/knowledge edges are real
# violations.

[[tool.importlinter.contracts]]
name = "app.engines only reaches plugins via the registry, never a vendor package or the llm layer (REPO-STRUCTURE §3.3 contract 3, §3.2 row 9)"
type = "forbidden"
source_modules = ["app.engines"]
forbidden_modules = ["app.llm", "app.plugins.vendors"]

[[tool.importlinter.contracts]]
# Partial row 4 coverage: this closes only the app.llm -> app.db edge PR #159
# review confirmed has zero live imports. app.llm -> app.models is a SEPARATE,
# already-live violation of the same row (llm/runtime_settings.py:31) and is
# intentionally NOT covered here — see the debt note in the PR body/REPO-
# STRUCTURE §9 rather than silently allowlisting it in a contract named as if
# it enforced the full row.
name = "app.llm does not import app.db (REPO-STRUCTURE §3.2 row 4, partial)"
type = "forbidden"
source_modules = ["app.llm"]
forbidden_modules = ["app.db"]

[[tool.importlinter.contracts]]
name = "app.agents.framework does not import app.plugins directly (REPO-STRUCTURE §3.2 row 10)"
type = "forbidden"
source_modules = ["app.agents.framework"]
forbidden_modules = ["app.plugins"]

[[tool.importlinter.contracts]]
name = "app.plugins.vendors.* packages are mutually independent (REPO-STRUCTURE §3.3 contract 5, §3.2 row 7, D6)"
type = "independence"
modules = [
    "app.plugins.vendors.bluecat",
    "app.plugins.vendors.cisco_ios",
    "app.plugins.vendors.cisco_iosxe",
    "app.plugins.vendors.cisco_nxos",
    "app.plugins.vendors.eos",
    "app.plugins.vendors.f5_bigip",
    "app.plugins.vendors.fortios",
    "app.plugins.vendors.infoblox",
    "app.plugins.vendors.junos",
    "app.plugins.vendors.panos",
    "app.plugins.vendors.spatiumddi",
    "app.plugins.vendors.vmware",
]
ignore_imports = [
    # Pre-existing CLI-parser reuse: cisco_iosxe/eos show-output is parsed by
    # the same ntc-templates "cisco_ios" platform key (ADR-0007), so both
    # import cisco_ios parser/management-path helpers directly instead of via
    # a shared non-vendor module (contrast app.plugins.vendors.cli_common,
    # which is not itself a vendor package). Reverses D6 "vendor packages are
    # independent and individually removable". Flagged as an open question in
    # the T1 report, not fixed here (zero behavior change).
    "app.plugins.vendors.cisco_iosxe.** -> app.plugins.vendors.cisco_ios.**",
    "app.plugins.vendors.eos.** -> app.plugins.vendors.cisco_ios.**",
]

# The layers contract's tails are relative to the "app" container (REPO-STRUCTURE
# §3.3 contract 6). Order is highest layer first; a higher layer may import any
# lower layer (not only the one directly below), and the reverse is forbidden
# (import-linter 2.13 LayersContract semantics). Tiers joined with "|" are
# independent siblings that may not import each other (e.g. the ten specialist
# agent packages, or knowledge/llm/plugins, must not reach across); "app.db"
# gets its own tier per REPO-STRUCTURE §9 A1 (a special-cased top-level module,
# analogous in dependency order to models/schemas, sitting just above core
# because nothing in models/schemas/knowledge/llm/plugins/core imports it and
# it only imports app.core.config).
[[tool.importlinter.contracts]]
name = "Layered architecture (REPO-STRUCTURE §3.3 contract 6, §3.1 dependency graph)"
type = "layers"
containers = ["app"]
layers = [
    "main",
    "api | workers",
    "agents.master_architect | agents.consultant | agents.discovery | agents.troubleshooting | agents.packet_analysis | agents.configuration | agents.ddi | agents.documentation | agents.security | agents.automation",
    "agents.framework",
    "engines",
    "services",
    "knowledge | llm | plugins",
    "models | schemas",
    "db",
    "core",
]
ignore_imports = [
    # REPO-STRUCTURE row 12: API enqueues Celery jobs via task signatures
    # only (app.api.v1.discovery / app.api.v1.agents -> app.workers.celery_app).
    "app.api.** -> app.workers.celery_app",
    # REPO-STRUCTURE row 5: knowledge needs an llm provider for embeddings (D9).
    "app.knowledge.embedding -> app.llm.redaction",
    # Pre-existing agent-session run bridge: app.services.agent_session.service
    # drives the supervisor graph directly. Reverses REPO-STRUCTURE row 8
    # ("services MUST NOT import agents"). Flagged as an open question in the
    # T1 report, not fixed here (zero behavior change).
    "app.services.agent_session.service -> app.agents.framework.*",
    # Discovery job dispatch remains at its established Celery signature seam;
    # owner: future discovery-dispatch framework port (not the read facade).
    "app.agents.discovery.tools -> app.workers.celery_app",
    # Pre-existing bidirectional models<->schemas cross-import: Normalized*
    # Pydantic schemas (app.schemas.normalized) are reused as ORM row
    # projections in app.models.adc/virtualization/inventory, and several API
    # schemas reuse model enums directly. Reverses REPO-STRUCTURE rows 2-3
    # ("MAY import: core" only). Flagged as an open question in the T1
    # report, not fixed here (zero behavior change).
    "app.models.adc -> app.schemas.normalized",
    "app.models.virtualization -> app.schemas.normalized",
    "app.models.inventory -> app.schemas.normalized",
    "app.schemas.agents_api -> app.models.agents",
    "app.schemas.applications -> app.models.applications",
    "app.schemas.changes_api -> app.models.change_requests",
    "app.schemas.config_mgmt -> app.models.config_mgmt",
    "app.schemas.credentials -> app.models.inventory",
    "app.schemas.devices -> app.models.inventory",
    "app.schemas.discovery_api -> app.models.inventory",
    # Pre-existing schemas -> engines reach-through (enum/type reuse for API
    # response shaping). Reverses REPO-STRUCTURE row 2 ("schemas MAY import:
    # core" only) and the layer order itself. Flagged as an open question in
    # the T1 report, not fixed here (zero behavior change).
    "app.schemas.config_mgmt -> app.engines.config_mgmt.compliance.engine",
    "app.schemas.config_mgmt -> app.engines.config_mgmt.compliance.schema",
    "app.schemas.discovery_api -> app.engines.discovery.planner",
    "app.schemas.topology -> app.engines.topology.diff",
]
